Billing Basket, Invoice refactor

--- a/Sphere/Common/Database/Config/Management.ini
+++ b/Sphere/Common/Database/Config/Management.ini
@@ -3,517 +3,525 @@
 ;#################################################################
 
 [Person:DS]
-Driver = PdoMySql
-Host = '192.168.1.201'
+Driver = 'PdoMySql'
+Host = '127.0.0.1'
 Port =
-Username = 'kreda'
-Password = 'kreda'
+Username = 'root'
+Password = ''
 Database = 'KredaPerson'
 
 [Address:DS]
-Driver = PdoMySql
-Host = '192.168.1.201'
+Driver = 'PdoMySql'
+Host = '127.0.0.1'
 Port =
-Username = 'kreda'
-Password = 'kreda'
+Username = 'root'
+Password = ''
 Database = 'KredaAddress'
 
 [Education:DS]
 Driver = 'PdoMySql'
-Host = '192.168.1.201'
+Host = '127.0.0.1'
 Port =
-Username = 'kreda'
-Password = 'kreda'
+Username = 'root'
+Password = ''
 Database = 'KredaEducation'
 
 [Course:DS]
 Driver = 'PdoMySql'
-Host = '192.168.1.201'
+Host = '127.0.0.1'
 Port =
-Username = 'kreda'
-Password = 'kreda'
+Username = 'root'
+Password = ''
 Database = 'KredaCourse'
 
 [Student:DS]
 Driver = 'PdoMySql'
-Host = '192.168.1.201'
+Host = '127.0.0.1'
 Port =
-Username = 'kreda'
-Password = 'kreda'
+Username = 'root'
+Password = ''
 Database = 'KredaStudent'
 
 [Contact:DS]
 Driver = 'PdoMySql'
-Host = '192.168.1.201'
+Host = '127.0.0.1'
 Port =
-Username = 'kreda'
-Password = 'kreda'
+Username = 'root'
+Password = ''
 Database = 'KredaContact'
 
-;#################################################################
-;# EGE
-;#################################################################
-
-[Person:EGE]
+[Company:DS]
 Driver = 'PdoMySql'
-Host = '192.168.1.201'
+Host = '127.0.0.1'
 Port =
-Username = 'kreda'
-Password = 'kreda'
-Database = 'KredaPerson'
+Username = 'root'
+Password = ''
+Database = 'KredaCompany'
 
-[Address:EGE]
-Driver = 'PdoMySql'
-Host = '192.168.1.201'
-Port =
-Username = 'kreda'
-Password = 'kreda'
-Database = 'KredaAddress'
-
-[Education:EGE]
-Driver = 'PdoMySql'
-Host = '192.168.1.201'
-Port =
-Username = 'kreda'
-Password = 'kreda'
-Database = 'KredaEducation'
-
-[Course:EGE]
-Driver = 'PdoMySql'
-Host = '192.168.1.201'
-Port =
-Username = 'kreda'
-Password = 'kreda'
-Database = 'KredaCourse'
-
-[Student:EGE]
-Driver = 'PdoMySql'
-Host = '192.168.1.201'
-Port =
-Username = 'kreda'
-Password = 'kreda'
-Database = 'KredaStudent'
-
-[Contact:EGE]
-Driver = 'PdoMySql'
-Host = '192.168.1.201'
-Port =
-Username = 'kreda'
-Password = 'kreda'
-Database = 'KredaContact'
-
-;#################################################################
-;# ESVL
-;#################################################################
-
-[Person:ESVL]
-Driver = 'PdoMySql'
-Host = '192.168.1.201'
-Port =
-Username = 'kreda'
-Password = 'kreda'
-Database = 'KredaPerson'
-
-[Address:ESVL]
-Driver = 'PdoMySql'
-Host = '192.168.1.201'
-Port =
-Username = 'kreda'
-Password = 'kreda'
-Database = 'KredaAddress'
-
-[Education:ESVL]
-Driver = 'PdoMySql'
-Host = '192.168.1.201'
-Port =
-Username = 'kreda'
-Password = 'kreda'
-Database = 'KredaEducation'
-
-[Course:ESVL]
-Driver = 'PdoMySql'
-Host = '192.168.1.201'
-Port =
-Username = 'kreda'
-Password = 'kreda'
-Database = 'KredaCourse'
-
-[Student:ESVL]
-Driver = 'PdoMySql'
-Host = '192.168.1.201'
-Port =
-Username = 'kreda'
-Password = 'kreda'
-Database = 'KredaStudent'
-
-[Contact:ESVL]
-Driver = 'PdoMySql'
-Host = '192.168.1.201'
-Port =
-Username = 'kreda'
-Password = 'kreda'
-Database = 'KredaContact'
-
-;#################################################################
-;# ESZC
-;#################################################################
-
-[Person:ESZC]
-Driver = 'PdoMySql'
-Host = '192.168.1.201'
-Port =
-Username = 'kreda'
-Password = 'kreda'
-Database = 'KredaPerson'
-
-[Address:ESZC]
-Driver = 'PdoMySql'
-Host = '192.168.1.201'
-Port =
-Username = 'kreda'
-Password = 'kreda'
-Database = 'KredaAddress'
-
-[Education:ESZC]
-Driver = 'PdoMySql'
-Host = '192.168.1.201'
-Port =
-Username = 'kreda'
-Password = 'kreda'
-Database = 'KredaEducation'
-
-[Course:ESZC]
-Driver = 'PdoMySql'
-Host = '192.168.1.201'
-Port =
-Username = 'kreda'
-Password = 'kreda'
-Database = 'KredaCourse'
-
-[Student:ESZC]
-Driver = 'PdoMySql'
-Host = '192.168.1.201'
-Port =
-Username = 'kreda'
-Password = 'kreda'
-Database = 'KredaStudent'
-
-[Contact:ESZC]
-Driver = 'PdoMySql'
-Host = '192.168.1.201'
-Port =
-Username = 'kreda'
-Password = 'kreda'
-Database = 'KredaContact'
-
-;#################################################################
-;# EVAMTL
-;#################################################################
-
-[Person:EVAMTL]
-Driver = 'PdoMySql'
-Host = '192.168.1.201'
-Port =
-Username = 'kreda'
-Password = 'kreda'
-Database = 'KredaPerson'
-
-[Address:EVAMTL]
-Driver = 'PdoMySql'
-Host = '192.168.1.201'
-Port =
-Username = 'kreda'
-Password = 'kreda'
-Database = 'KredaAddress'
-
-[Education:EVAMTL]
-Driver = 'PdoMySql'
-Host = '192.168.1.201'
-Port =
-Username = 'kreda'
-Password = 'kreda'
-Database = 'KredaEducation'
-
-[Course:EVAMTL]
-Driver = 'PdoMySql'
-Host = '192.168.1.201'
-Port =
-Username = 'kreda'
-Password = 'kreda'
-Database = 'KredaCourse'
-
-[Student:EVAMTL]
-Driver = 'PdoMySql'
-Host = '192.168.1.201'
-Port =
-Username = 'kreda'
-Password = 'kreda'
-Database = 'KredaStudent'
-
-[Contact:EVAMTL]
-Driver = 'PdoMySql'
-Host = '192.168.1.201'
-Port =
-Username = 'kreda'
-Password = 'kreda'
-Database = 'KredaContact'
-
-;#################################################################
-;# EVAP
-;#################################################################
-
-[Person:EVAP]
-Driver = 'PdoMySql'
-Host = '192.168.1.201'
-Port =
-Username = 'kreda'
-Password = 'kreda'
-Database = 'KredaPerson'
-
-[Address:EVAP]
-Driver = 'PdoMySql'
-Host = '192.168.1.201'
-Port =
-Username = 'kreda'
-Password = 'kreda'
-Database = 'KredaAddress'
-
-[Education:EVAP]
-Driver = 'PdoMySql'
-Host = '192.168.1.201'
-Port =
-Username = 'kreda'
-Password = 'kreda'
-Database = 'KredaEducation'
-
-[Course:EVAP]
-Driver = 'PdoMySql'
-Host = '192.168.1.201'
-Port =
-Username = 'kreda'
-Password = 'kreda'
-Database = 'KredaCourse'
-
-[Student:EVAP]
-Driver = 'PdoMySql'
-Host = '192.168.1.201'
-Port =
-Username = 'kreda'
-Password = 'kreda'
-Database = 'KredaStudent'
-
-[Contact:EVAP]
-Driver = 'PdoMySql'
-Host = '192.168.1.201'
-Port =
-Username = 'kreda'
-Password = 'kreda'
-Database = 'KredaContact'
-
-;#################################################################
-;# EVOSG
-;#################################################################
-
-[Person:EVOSG]
-Driver = 'PdoMySql'
-Host = '192.168.1.201'
-Port =
-Username = 'kreda'
-Password = 'kreda'
-Database = 'KredaPerson'
-
-[Address:EVOSG]
-Driver = 'PdoMySql'
-Host = '192.168.1.201'
-Port =
-Username = 'kreda'
-Password = 'kreda'
-Database = 'KredaAddress'
-
-[Education:EVOSG]
-Driver = 'PdoMySql'
-Host = '192.168.1.201'
-Port =
-Username = 'kreda'
-Password = 'kreda'
-Database = 'KredaEducation'
-
-[Course:EVOSG]
-Driver = 'PdoMySql'
-Host = '192.168.1.201'
-Port =
-Username = 'kreda'
-Password = 'kreda'
-Database = 'KredaCourse'
-
-[Student:EVOSG]
-Driver = 'PdoMySql'
-Host = '192.168.1.201'
-Port =
-Username = 'kreda'
-Password = 'kreda'
-Database = 'KredaStudent'
-
-[Contact:EVOSG]
-Driver = 'PdoMySql'
-Host = '192.168.1.201'
-Port =
-Username = 'kreda'
-Password = 'kreda'
-Database = 'KredaContact'
-
-;#################################################################
-;# EZGH
-;#################################################################
-
-[Person:EZGH]
-Driver = 'PdoMySql'
-Host = '192.168.1.201'
-Port =
-Username = 'kreda'
-Password = 'kreda'
-Database = 'KredaPerson'
-
-[Address:EZGH]
-Driver = 'PdoMySql'
-Host = '192.168.1.201'
-Port =
-Username = 'kreda'
-Password = 'kreda'
-Database = 'KredaAddress'
-
-[Education:EZGH]
-Driver = 'PdoMySql'
-Host = '192.168.1.201'
-Port =
-Username = 'kreda'
-Password = 'kreda'
-Database = 'KredaEducation'
-
-[Course:EZGH]
-Driver = 'PdoMySql'
-Host = '192.168.1.201'
-Port =
-Username = 'kreda'
-Password = 'kreda'
-Database = 'KredaCourse'
-
-[Student:EZGH]
-Driver = 'PdoMySql'
-Host = '192.168.1.201'
-Port =
-Username = 'kreda'
-Password = 'kreda'
-Database = 'KredaStudent'
-
-[Contact:EZGH]
-Driver = 'PdoMySql'
-Host = '192.168.1.201'
-Port =
-Username = 'kreda'
-Password = 'kreda'
-Database = 'KredaContact'
-
-;#################################################################
-;# LWSZ
-;#################################################################
-
-[Person:LWSZ]
-Driver = 'PdoMySql'
-Host = '192.168.1.201'
-Port =
-Username = 'kreda'
-Password = 'kreda'
-Database = 'KredaPerson'
-
-[Address:LWSZ]
-Driver = 'PdoMySql'
-Host = '192.168.1.201'
-Port =
-Username = 'kreda'
-Password = 'kreda'
-Database = 'KredaAddress'
-
-[Education:LWSZ]
-Driver = 'PdoMySql'
-Host = '192.168.1.201'
-Port =
-Username = 'kreda'
-Password = 'kreda'
-Database = 'KredaEducation'
-
-[Course:LWSZ]
-Driver = 'PdoMySql'
-Host = '192.168.1.201'
-Port =
-Username = 'kreda'
-Password = 'kreda'
-Database = 'KredaCourse'
-
-[Student:LWSZ]
-Driver = 'PdoMySql'
-Host = '192.168.1.201'
-Port =
-Username = 'kreda'
-Password = 'kreda'
-Database = 'KredaStudent'
-
-[Contact:LWSZ]
-Driver = 'PdoMySql'
-Host = '192.168.1.201'
-Port =
-Username = 'kreda'
-Password = 'kreda'
-Database = 'KredaContact'
-
-;#################################################################
-;# FEGH
-;#################################################################
-
-[Person:FEGH]
-Driver = 'PdoMySql'
-Host = '192.168.1.201'
-Port =
-Username = 'kreda'
-Password = 'kreda'
-Database = 'KredaPerson'
-
-[Address:FEGH]
-Driver = 'PdoMySql'
-Host = '192.168.1.201'
-Port =
-Username = 'kreda'
-Password = 'kreda'
-Database = 'KredaAddress'
-
-[Education:FEGH]
-Driver = 'PdoMySql'
-Host = '192.168.1.201'
-Port =
-Username = 'kreda'
-Password = 'kreda'
-Database = 'KredaEducation'
-
-[Course:FEGH]
-Driver = 'PdoMySql'
-Host = '192.168.1.201'
-Port =
-Username = 'kreda'
-Password = 'kreda'
-Database = 'KredaCourse'
-
-[Student:FEGH]
-Driver = 'PdoMySql'
-Host = '192.168.1.201'
-Port =
-Username = 'kreda'
-Password = 'kreda'
-Database = 'KredaStudent'
-
-[Contact:FEGH]
-Driver = 'PdoMySql'
-Host = '192.168.1.201'
-Port =
-Username = 'kreda'
-Password = 'kreda'
-Database = 'KredaContact'
+;;#################################################################
+;;# EGE
+;;#################################################################
+;
+;[Person:EGE]
+;Driver = 'PdoMySql'
+;Host = '192.168.1.201'
+;Port =
+;Username = 'kreda'
+;Password = 'kreda'
+;Database = 'KredaPerson'
+;
+;[Address:EGE]
+;Driver = 'PdoMySql'
+;Host = '192.168.1.201'
+;Port =
+;Username = 'kreda'
+;Password = 'kreda'
+;Database = 'KredaAddress'
+;
+;[Education:EGE]
+;Driver = 'PdoMySql'
+;Host = '192.168.1.201'
+;Port =
+;Username = 'kreda'
+;Password = 'kreda'
+;Database = 'KredaEducation'
+;
+;[Course:EGE]
+;Driver = 'PdoMySql'
+;Host = '192.168.1.201'
+;Port =
+;Username = 'kreda'
+;Password = 'kreda'
+;Database = 'KredaCourse'
+;
+;[Student:EGE]
+;Driver = 'PdoMySql'
+;Host = '192.168.1.201'
+;Port =
+;Username = 'kreda'
+;Password = 'kreda'
+;Database = 'KredaStudent'
+;
+;[Contact:EGE]
+;Driver = 'PdoMySql'
+;Host = '192.168.1.201'
+;Port =
+;Username = 'kreda'
+;Password = 'kreda'
+;Database = 'KredaContact'
+;
+;;#################################################################
+;;# ESVL
+;;#################################################################
+;
+;[Person:ESVL]
+;Driver = 'PdoMySql'
+;Host = '192.168.1.201'
+;Port =
+;Username = 'kreda'
+;Password = 'kreda'
+;Database = 'KredaPerson'
+;
+;[Address:ESVL]
+;Driver = 'PdoMySql'
+;Host = '192.168.1.201'
+;Port =
+;Username = 'kreda'
+;Password = 'kreda'
+;Database = 'KredaAddress'
+;
+;[Education:ESVL]
+;Driver = 'PdoMySql'
+;Host = '192.168.1.201'
+;Port =
+;Username = 'kreda'
+;Password = 'kreda'
+;Database = 'KredaEducation'
+;
+;[Course:ESVL]
+;Driver = 'PdoMySql'
+;Host = '192.168.1.201'
+;Port =
+;Username = 'kreda'
+;Password = 'kreda'
+;Database = 'KredaCourse'
+;
+;[Student:ESVL]
+;Driver = 'PdoMySql'
+;Host = '192.168.1.201'
+;Port =
+;Username = 'kreda'
+;Password = 'kreda'
+;Database = 'KredaStudent'
+;
+;[Contact:ESVL]
+;Driver = 'PdoMySql'
+;Host = '192.168.1.201'
+;Port =
+;Username = 'kreda'
+;Password = 'kreda'
+;Database = 'KredaContact'
+;
+;;#################################################################
+;;# ESZC
+;;#################################################################
+;
+;[Person:ESZC]
+;Driver = 'PdoMySql'
+;Host = '192.168.1.201'
+;Port =
+;Username = 'kreda'
+;Password = 'kreda'
+;Database = 'KredaPerson'
+;
+;[Address:ESZC]
+;Driver = 'PdoMySql'
+;Host = '192.168.1.201'
+;Port =
+;Username = 'kreda'
+;Password = 'kreda'
+;Database = 'KredaAddress'
+;
+;[Education:ESZC]
+;Driver = 'PdoMySql'
+;Host = '192.168.1.201'
+;Port =
+;Username = 'kreda'
+;Password = 'kreda'
+;Database = 'KredaEducation'
+;
+;[Course:ESZC]
+;Driver = 'PdoMySql'
+;Host = '192.168.1.201'
+;Port =
+;Username = 'kreda'
+;Password = 'kreda'
+;Database = 'KredaCourse'
+;
+;[Student:ESZC]
+;Driver = 'PdoMySql'
+;Host = '192.168.1.201'
+;Port =
+;Username = 'kreda'
+;Password = 'kreda'
+;Database = 'KredaStudent'
+;
+;[Contact:ESZC]
+;Driver = 'PdoMySql'
+;Host = '192.168.1.201'
+;Port =
+;Username = 'kreda'
+;Password = 'kreda'
+;Database = 'KredaContact'
+;
+;;#################################################################
+;;# EVAMTL
+;;#################################################################
+;
+;[Person:EVAMTL]
+;Driver = 'PdoMySql'
+;Host = '192.168.1.201'
+;Port =
+;Username = 'kreda'
+;Password = 'kreda'
+;Database = 'KredaPerson'
+;
+;[Address:EVAMTL]
+;Driver = 'PdoMySql'
+;Host = '192.168.1.201'
+;Port =
+;Username = 'kreda'
+;Password = 'kreda'
+;Database = 'KredaAddress'
+;
+;[Education:EVAMTL]
+;Driver = 'PdoMySql'
+;Host = '192.168.1.201'
+;Port =
+;Username = 'kreda'
+;Password = 'kreda'
+;Database = 'KredaEducation'
+;
+;[Course:EVAMTL]
+;Driver = 'PdoMySql'
+;Host = '192.168.1.201'
+;Port =
+;Username = 'kreda'
+;Password = 'kreda'
+;Database = 'KredaCourse'
+;
+;[Student:EVAMTL]
+;Driver = 'PdoMySql'
+;Host = '192.168.1.201'
+;Port =
+;Username = 'kreda'
+;Password = 'kreda'
+;Database = 'KredaStudent'
+;
+;[Contact:EVAMTL]
+;Driver = 'PdoMySql'
+;Host = '192.168.1.201'
+;Port =
+;Username = 'kreda'
+;Password = 'kreda'
+;Database = 'KredaContact'
+;
+;;#################################################################
+;;# EVAP
+;;#################################################################
+;
+;[Person:EVAP]
+;Driver = 'PdoMySql'
+;Host = '192.168.1.201'
+;Port =
+;Username = 'kreda'
+;Password = 'kreda'
+;Database = 'KredaPerson'
+;
+;[Address:EVAP]
+;Driver = 'PdoMySql'
+;Host = '192.168.1.201'
+;Port =
+;Username = 'kreda'
+;Password = 'kreda'
+;Database = 'KredaAddress'
+;
+;[Education:EVAP]
+;Driver = 'PdoMySql'
+;Host = '192.168.1.201'
+;Port =
+;Username = 'kreda'
+;Password = 'kreda'
+;Database = 'KredaEducation'
+;
+;[Course:EVAP]
+;Driver = 'PdoMySql'
+;Host = '192.168.1.201'
+;Port =
+;Username = 'kreda'
+;Password = 'kreda'
+;Database = 'KredaCourse'
+;
+;[Student:EVAP]
+;Driver = 'PdoMySql'
+;Host = '192.168.1.201'
+;Port =
+;Username = 'kreda'
+;Password = 'kreda'
+;Database = 'KredaStudent'
+;
+;[Contact:EVAP]
+;Driver = 'PdoMySql'
+;Host = '192.168.1.201'
+;Port =
+;Username = 'kreda'
+;Password = 'kreda'
+;Database = 'KredaContact'
+;
+;;#################################################################
+;;# EVOSG
+;;#################################################################
+;
+;[Person:EVOSG]
+;Driver = 'PdoMySql'
+;Host = '192.168.1.201'
+;Port =
+;Username = 'kreda'
+;Password = 'kreda'
+;Database = 'KredaPerson'
+;
+;[Address:EVOSG]
+;Driver = 'PdoMySql'
+;Host = '192.168.1.201'
+;Port =
+;Username = 'kreda'
+;Password = 'kreda'
+;Database = 'KredaAddress'
+;
+;[Education:EVOSG]
+;Driver = 'PdoMySql'
+;Host = '192.168.1.201'
+;Port =
+;Username = 'kreda'
+;Password = 'kreda'
+;Database = 'KredaEducation'
+;
+;[Course:EVOSG]
+;Driver = 'PdoMySql'
+;Host = '192.168.1.201'
+;Port =
+;Username = 'kreda'
+;Password = 'kreda'
+;Database = 'KredaCourse'
+;
+;[Student:EVOSG]
+;Driver = 'PdoMySql'
+;Host = '192.168.1.201'
+;Port =
+;Username = 'kreda'
+;Password = 'kreda'
+;Database = 'KredaStudent'
+;
+;[Contact:EVOSG]
+;Driver = 'PdoMySql'
+;Host = '192.168.1.201'
+;Port =
+;Username = 'kreda'
+;Password = 'kreda'
+;Database = 'KredaContact'
+;
+;;#################################################################
+;;# EZGH
+;;#################################################################
+;
+;[Person:EZGH]
+;Driver = 'PdoMySql'
+;Host = '192.168.1.201'
+;Port =
+;Username = 'kreda'
+;Password = 'kreda'
+;Database = 'KredaPerson'
+;
+;[Address:EZGH]
+;Driver = 'PdoMySql'
+;Host = '192.168.1.201'
+;Port =
+;Username = 'kreda'
+;Password = 'kreda'
+;Database = 'KredaAddress'
+;
+;[Education:EZGH]
+;Driver = 'PdoMySql'
+;Host = '192.168.1.201'
+;Port =
+;Username = 'kreda'
+;Password = 'kreda'
+;Database = 'KredaEducation'
+;
+;[Course:EZGH]
+;Driver = 'PdoMySql'
+;Host = '192.168.1.201'
+;Port =
+;Username = 'kreda'
+;Password = 'kreda'
+;Database = 'KredaCourse'
+;
+;[Student:EZGH]
+;Driver = 'PdoMySql'
+;Host = '192.168.1.201'
+;Port =
+;Username = 'kreda'
+;Password = 'kreda'
+;Database = 'KredaStudent'
+;
+;[Contact:EZGH]
+;Driver = 'PdoMySql'
+;Host = '192.168.1.201'
+;Port =
+;Username = 'kreda'
+;Password = 'kreda'
+;Database = 'KredaContact'
+;
+;;#################################################################
+;;# LWSZ
+;;#################################################################
+;
+;[Person:LWSZ]
+;Driver = 'PdoMySql'
+;Host = '192.168.1.201'
+;Port =
+;Username = 'kreda'
+;Password = 'kreda'
+;Database = 'KredaPerson'
+;
+;[Address:LWSZ]
+;Driver = 'PdoMySql'
+;Host = '192.168.1.201'
+;Port =
+;Username = 'kreda'
+;Password = 'kreda'
+;Database = 'KredaAddress'
+;
+;[Education:LWSZ]
+;Driver = 'PdoMySql'
+;Host = '192.168.1.201'
+;Port =
+;Username = 'kreda'
+;Password = 'kreda'
+;Database = 'KredaEducation'
+;
+;[Course:LWSZ]
+;Driver = 'PdoMySql'
+;Host = '192.168.1.201'
+;Port =
+;Username = 'kreda'
+;Password = 'kreda'
+;Database = 'KredaCourse'
+;
+;[Student:LWSZ]
+;Driver = 'PdoMySql'
+;Host = '192.168.1.201'
+;Port =
+;Username = 'kreda'
+;Password = 'kreda'
+;Database = 'KredaStudent'
+;
+;[Contact:LWSZ]
+;Driver = 'PdoMySql'
+;Host = '192.168.1.201'
+;Port =
+;Username = 'kreda'
+;Password = 'kreda'
+;Database = 'KredaContact'
+;
+;;#################################################################
+;;# FEGH
+;;#################################################################
+;
+;[Person:FEGH]
+;Driver = 'PdoMySql'
+;Host = '192.168.1.201'
+;Port =
+;Username = 'kreda'
+;Password = 'kreda'
+;Database = 'KredaPerson'
+;
+;[Address:FEGH]
+;Driver = 'PdoMySql'
+;Host = '192.168.1.201'
+;Port =
+;Username = 'kreda'
+;Password = 'kreda'
+;Database = 'KredaAddress'
+;
+;[Education:FEGH]
+;Driver = 'PdoMySql'
+;Host = '192.168.1.201'
+;Port =
+;Username = 'kreda'
+;Password = 'kreda'
+;Database = 'KredaEducation'
+;
+;[Course:FEGH]
+;Driver = 'PdoMySql'
+;Host = '192.168.1.201'
+;Port =
+;Username = 'kreda'
+;Password = 'kreda'
+;Database = 'KredaCourse'
+;
+;[Student:FEGH]
+;Driver = 'PdoMySql'
+;Host = '192.168.1.201'
+;Port =
+;Username = 'kreda'
+;Password = 'kreda'
+;Database = 'KredaStudent'
+;
+;[Contact:FEGH]
+;Driver = 'PdoMySql'
+;Host = '192.168.1.201'
+;Port =
+;Username = 'kreda'
+;Password = 'kreda'
+;Database = 'KredaContact'
